# big_data_bitcoin_forecasting

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup.toml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: data_analysis.ipynb  data_preparation.ipynb  decision_tree.ipynb  main.ipynb  more_models.ipynb  random_forest.ipynb  random_forest_distributed.ipynb  random_forest_exchange_view.ipynb  random_forest_test.ipynb
src/models/: train_model.py
src/utils/: constants.py  utils.py
src/visualization/: visualize.py
