[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bctf"
version = "0.1.0"
description = "Big Data case study for CS - AI MsC @ UniBA"
requires-python = ">= 3.9"
authors = [{ name = "Francesco Peragine" }]
license = { text = "MIT" }
dependencies = [
    "click",
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "scikit-learn",
    "seaborn",
    "technical_analysis",
    "auto_mix_prep",
    "pyarrow",
    "pipreqs",
    "setuptools"
]

[tool.setuptools.packages]
find = {}

